CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Hierachical_Reduction)

SET(CMAKE_BUILD_TYPE "Debug")

SET(CMAKE_C_FLAGS_DEBUG "-g -Wall")

SET(CMAKE_C_FLAGS_RELEASE "-O2 -Wall")

#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=gnu++11 -Wall -g")
#SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=gnu++11 -O2 -Wall")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(src)