CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Hierachical_Reduction)

SET(CMAKE_BUILD_TYPE "Debug")

SET(CMAKE_C_FLAGS_DEBUG "-g -Wall -fPIC")

SET(CMAKE_C_FLAGS_RELEASE "-O2 -Wall -fPIC")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)

ENABLE_TESTING()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(src)

ADD_SUBDIRECTORY(test)