FIND_PACKAGE(HDF5 COMPONENTS HL REQUIRED)

INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS} ${HDF5_HL_INCLUDE_DIR})

SET(main_file solver.c)

FILE(GLOB HS_SOURCES *.c)

LIST(REMOVE_ITEM HS_SOURCES ${main_file})

ADD_LIBRARY(hs SHARED ${HS_SOURCES})

TARGET_LINK_LIBRARIES(hs pthread m ${HDF5_LIBRARIES})

ADD_EXECUTABLE(fixw ${main_file})

TARGET_LINK_LIBRARIES(fixw hs pthread)
